Bug #49536
client: Inode.cc: 405: FAILED ceph_assert(_ref >= 0)
0%
Description
When running the ceph mount/unmount serially by around 100000 times, I see:
/data/ceph/src/client/Inode.cc: In function 'int Inode::_put(int)' thread 14ea23fff700 time 2021-02-28T11:45:06.828881+0800
/data/ceph/src/client/Inode.cc: 405: FAILED ceph_assert(ref >= 0)
ceph version 17.0.0-996-gb62cfed7733 (b62cfed773345b8bf7e46b3129bed4444db927ea) quincy (dev)
1: (ceph::_ceph_assert_fail(char const*, char const*, int, char const*)+0x1aa) [0x14ea31337f00]
2: /data/ceph/build/lib/libceph-common.so.2(0x16ac182) [0x14ea31338182]
3: /data/ceph/build/lib/libcephfs.so.2(+0x22c784) [0x14ea2f7c8784]
4: /data/ceph/build/lib/libcephfs.so.2(+0xd8d1e) [0x14ea2f674d1e]
5: /data/ceph/build/lib/libcephfs.so.2(+0xd9190) [0x14ea2f675190]
6: /data/ceph/build/lib/libcephfs.so.2(+0xfb7e2) [0x14ea2f6977e2]
7: /data/ceph/build/lib/libcephfs.so.2(+0xfba74) [0x14ea2f697a74]
8: /data/ceph/build/lib/libcephfs.so.2(+0x14ac7d) [0x14ea2f6e6c7d]
9: /data/ceph/build/lib/libcephfs.so.2(+0x14a8b7) [0x14ea2f6e68b7]
10: /data/ceph/build/lib/libcephfs.so.2(+0x14d040) [0x14ea2f6e9040]
11: /data/ceph/build/lib/libcephfs.so.2(+0x14d016) [0x14ea2f6e9016]
12: /data/ceph/build/lib/libcephfs.so.2(+0x14cffa) [0x14ea2f6e8ffa]
13: /lib64/libstdc+.so.6(+0xc2ba3) [0x14ea2d3c7ba3]
14: /lib64/libpthread.so.0(+0x82de) [0x14ea2f3842de]
15: clone()
Aborted (core dumped)
Related issues
History
#1 Updated by Xiubo Li about 2 months ago
- Pull request ID set to 39742
#2 Updated by Xiubo Li about 2 months ago
Switched the _ref to atomic type.
#3 Updated by Xiubo Li about 2 months ago
- Status changed from New to Fix Under Review
#4 Updated by Xiubo Li about 2 months ago
- Component(FS) libcephfs added
- Labels (FS) crash added
#5 Updated by Xiubo Li about 2 months ago
- Status changed from Fix Under Review to In Progress
#6 Updated by Xiubo Li about 2 months ago
- Priority changed from Normal to High
#7 Updated by Patrick Donnelly about 2 months ago
- Status changed from In Progress to Fix Under Review
- Assignee set to Xiubo Li
- Target version set to v17.0.0
- Source set to Development
- Backport set to pacific,octopus,nautilus
#8 Updated by Patrick Donnelly about 21 hours ago
- Status changed from Fix Under Review to Pending Backport
- Backport changed from pacific,octopus,nautilus to pacific
We can try backporting this to pacific but I don't think it's worth the trouble farther than that.
#9 Updated by Backport Bot about 21 hours ago
- Copied to Backport #50445: pacific: client: Inode.cc: 405: FAILED ceph_assert(_ref >= 0) added