client: minor cleanup to Inode related code

To make the code more readable.

Fixes: https://tracker.ceph.com/issues/49536
Signed-off-by: Xiubo Li <xiubli@redhat.com>